--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,12 +3,18 @@
 @tailwind utilities;
 
 :root {
-  --background: #f5f5f5;
-  --foreground: #333333;
+  --background: #FDFBF5;
+  --foreground: #41424C;
+  --accent: #A4B0BE;
+  --accent-secondary: #B49B85;
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
   transition: color 0.3s ease, background 0.3s ease;
+}
+
+a {
+  color: var(--accent);
 }
